Set width of content and fix scroll alignment inconsistencies among members

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    overflow: scroll;
+}
+
 body {
     font-family: Tahoma, sans-serif;
     display: flex;
@@ -65,6 +69,7 @@ input {
 .content {
     background-color: #F0F8FF;
     border-radius: 8px;
+    box-sizing: border-box;
     padding: 2em;
     margin: 2em;
     font-weight: 500;
@@ -94,12 +99,16 @@ input {
         height: 52px;
     }
 
-    #result {
-        display: flex;
-    }
-
     section {
         box-sizing: border-box;
         width: 285px;
+    }
+
+    .content {
+        width: 940px;
+    }
+
+    #result {
+        display: flex;
     }
 }
